[tool.poetry]
name = "spotify-voice-control"
version = "0.1.0"
description = ""
authors = ["Daniil Istomin <riisa.toro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.20.0"
python-dotenv = "^0.20.0"
PyAudio = "^0.2.12"
SpeechRecognition = "^3.8.1"
google-api-python-client = "^2.57.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
